// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept "style" prop 1`] = `
.emotion-0 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-rows: minmax(min-content,max-content);
  gap: 1rem;
  justify-items: stretch;
  color: red;
}

<div>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
    <span>
      2
    </span>
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-rows: minmax(min-content,max-content);
  gap: 1rem;
  justify-items: stretch;
}

<div>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
    <span>
      2
    </span>
    <span>
      3
    </span>
    456
  </div>
</div>
`;

exports[`should render only valid children 1`] = `
.emotion-0 {
  display: grid;
  grid-auto-flow: row;
  grid-auto-rows: minmax(min-content,max-content);
  gap: 1rem;
  justify-items: stretch;
}

<div>
  <div
    class="emotion-0"
  >
    <span>
      testing vflow
    </span>
    <span>
      testing vflow
    </span>
  </div>
</div>
`;
